# corpus-preparation

./: .env.example  .gitignore  AGENTS.md  LICENSE  MEMORY.md  README.md  SCHEMA.md  SOUL.md  TASKS.md  TOOLS.md  pyproject.toml
.github/: copilot-instructions.md
memory/: 2026-04-07.md
scripts/: make_dummy_pdf.py
src/corpusprep/: __init__.py  cli.py  enrichment.py  extractors.py  metadata.py  models.py  pipeline.py  splitter.py
tests/: test_enrichment.py  test_extractors.py  test_metadata.py  test_splitter.py
